ex10/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: metacoding
spec:
  ingressClassName: nginx
  rules:
    - host: metacoding.local # hosts에 매핑해서 쓰기. IP로 쓰려면 이 줄 제거 가능
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
